# cleanmail

./: LICENSE  README.md  pyproject.toml
cleanmail/: __init__.py  core.py
